 - GB, GBA Serialize: Fix loading two states in a row
 - GBA Video: Fix enabling layers in non-tile modes (fixes mgba.io/i/1317)
 - Qt: Fix quick load recent accidentally saving (fixes mgba.io/i/1309)
 - GBA: Fix video timing when skipping BIOS (fixes mgba.io/i/1318)
 - 3DS: Work around menu freezing (fixes mgba.io/i/1294)
 - GBA DMA: Fix invalid DMA handling (fixes mgba.io/i/1301)
Misc:
 - GBA Savedata: EEPROM performance fixes
 - GBA Savedata: Automatically map 1Mbit Flash files as 1Mbit Flash
 - GB Memory: Support running from blocked memory
 - Qt: Don't unload ROM immediately if it crashes
 - GBA Video: Improve sprite cycle counting (fixes mgba.io/i/1274)
 - Debugger: Add breakpoint and watchpoint listing
 - Qt: Updated Italian translation (by Vecna)
 - GBA: Improve delayed IRQ timing

0.7.0: (2019-01-26)
Features:
 - ELF support
 - Game Boy Camera support
 - Qt: Set default Game Boy colors
 - Game Boy Printer support
 - Super Game Boy support
 - Customizable autofire speed
 - Ability to set default Game Boy model
 - Map viewer
 - Automatic cheat loading and saving
 - GameShark and Action Replay button support
 - AGBPrint support
 - Debugger: Conditional breakpoints and watchpoints
 - Ability to select GB/GBC/SGB BIOS on console ports
 - Optional automatic state saving/loading
 - Access to ur0 and uma0 partitions on the Vita
 - Partial support for MBC6, MMM01, TAMA and HuC-1 GB mappers
 - GBA: ARMIPS/A22i-style and ELF symbol table support
 - Initial Switch port
Bugfixes:
 - ARM: Fix MSR when T bit is set
 - Core: Fix audio sync breaking when interrupted
 - Core: Fix ordering events when scheduling during events
 - FFmpeg: Fix encoding audio/video queue issues
 - GB: Revamp IRQ handling based on new information
 - GB: Fix IRQ disabling on the same T-cycle as an assert
 - GB Audio: Make audio unsigned with bias (fixes mgba.io/i/749)
 - GB Audio: Clock frame events on DIV
 - GB Audio: Fix channel 3 reset value
 - GB Audio: Fix channel 4 initial LFSR