@@ -28,6 +28,7 @@ Bugfixes:
  - GBA: Fix video timing when skipping BIOS (fixes mgba.io/i/1318)
  - 3DS: Work around menu freezing (fixes mgba.io/i/1294)
  - GBA DMA: Fix invalid DMA handling (fixes mgba.io/i/1301)
+ - PSP2: Fix file descriptors dying on suspend (fixes mgba.io/i/1123)
 Misc:
  - GBA Savedata: EEPROM performance fixes
  - GBA Savedata: Automatically map 1Mbit Flash files as 1Mbit Flash
